Update the README file.

--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-search/applicants-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-search/applicants-search.component.html
@@ -1,6 +1,11 @@
 <div class="container card-white">
 
   <div class="ui-g">
+
+      <div class="ui-g-12">
+          <h1>List of Applicants</h1>
+        </div>
+
     <form autocomplete="off" (ngSubmit)="search()">
       <div class="ui-g-12 ui-fluid" class="form-inline">
         <br/>
