--- a/UI-Angular/JobsAdmin/src/app/schedules/schedules-search/schedules-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/schedules/schedules-search/schedules-search.component.html
@@ -1,5 +1,11 @@
 <div class="container card-white">
   <div class="ui-g">
+
+
+    <div class="ui-g-12">
+      <h1>List of Schedules</h1>
+    </div>
+
     <div class="ui-g-12">
 
       <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
