--- a/UI-Angular/JobsAdmin/src/styles.css
+++ b/UI-Angular/JobsAdmin/src/styles.css
@@ -59,6 +59,20 @@ label {
   text-align: center;
 }
 
+.col-size-rating {
+  width: 110px;
+  text-align: center;
+}
+
+.col-size-date {
+  width: 90px;
+  text-align: center;
+}
+
+.col-size-name {
+  width: 230px;
+}
+
 .col-size-subject {
   width: 60px;
 }
