--- a/UI-Angular/JobsAdmin/src/styles.css
+++ b/UI-Angular/JobsAdmin/src/styles.css
@@ -49,6 +49,12 @@ label {
   text-align: center;
 }
 
+
+.col-size-btn-job{
+  width: 200px;
+  text-align: center;
+}
+
 .col-acoes {
   width: 90px;
   text-align: center;
