--- a/UI-Angular/JobsAdmin/src/app/jobs/jobs-search/jobs-search.component.html
+++ b/UI-Angular/JobsAdmin/src/app/jobs/jobs-search/jobs-search.component.html
@@ -1,34 +1,38 @@
 <div class="container card-white">
   <div class="ui-g">
 
-    <div class="ui-g-12">
-      <h1>List of Jobs</h1>
-    </div>
 
-    <form autocomplete="off" (ngSubmit)="search()">
-      <div class="ui-g-12 ui-fluid" class="form-inline">
-        <br/>
-        <button pButton type="submit" label="Add Job" icon="fa-plus" class="ui-button-success" [routerLink]="['/jobs/newjob']"></button>
-        <input pInputText type="text" name="title" placeholder="Job Title" [(ngModel)]="filter.title">
-        <button pButton type="submit" icon="fa-search" pTooltip="Search" tooltipPosition="top"></button>
-      </div>
-    </form>
+      <h1>List of Jobs</h1>
+
 
   </div>
 
   <div class="ui-g">
     <div class="ui-g-12">
-      <p-dataTable [value]="jobsweb" [responsive]="true" emptyMessage="No jobs available." [paginator]="true" [rows]="filter.itensPage"
-        [lazy]="true" [totalRecords]="totalRecords" (onLazyLoad)="changePage($event)" #table>
-        <p-column field="title" header="Title"></p-column>
-        <p-column field="position" header="Position"></p-column>
-        <p-column field="location" header="Location"></p-column>
-        <p-column header="Publication" styleClass="col-size">
+
+      <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
+        <button pButton type="submit" label="Add Job" icon="fa-plus" class="ui-button-success" [routerLink]="['/jobs/newjob']"></button>
+        <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+        <input #gb type="text" pInputText size="50" placeholder="Jobs">
+      </div>
+
+      <p-dataTable [value]="jobsweb" [responsive]="true" [rows]="15" [paginator]="true" emptyMessage="No jobs available." [globalFilter]="gb"
+        #table>
+
+        <p-column field="title" header="Title" [sortable]="true"></p-column>
+
+        <p-column field="position" header="Position" [sortable]="true"></p-column>
+
+        <p-column field="location" header="Location" [sortable]="true"></p-column>
+
+        <p-column header="Publication" styleClass="col-size" [sortable]="true">
           <ng-template let-job="rowData" pTemplate="body">
             <span>{{ job.publication | date:'dd/MM/yyyy' }}</span>
           </ng-template>
         </p-column>
-        <p-column field="status" header="Status" styleClass="col-size"></p-column>
+
+        <p-column field="status" header="Status" styleClass="col-size" [sortable]="true"></p-column>
+
         <p-column styleClass="col-size-btn-job">
           <ng-template let-job="rowData" pTemplate="body">
             <button pButton icon="fa-user" label="Applicants" pTooltip="Applicants for {{job.title}}" tooltipPosition="top" [routerLink]="['/applied', job.code, job.title]"></button>
@@ -36,13 +40,10 @@
               [disabled]="!auth.havePermission('ROLE_ADD_JOB')"></button>
             <button pButton icon="fa-trash" pTooltip="Delete" tooltipPosition="top" (click)="confirmationDelete(job)" [disabled]="!auth.havePermission('ROLE_REMOVE_JOB')"
               class="ui-button-danger"></button>
-            <!--
-              <button pButton icon="fa-search-plus" pTooltip="More details" tooltipPosition="top" (click)="showJobDetails(job)"></button>
-              <button pButton type="submit" label="Apply Now" icon="fa-plus" tooltipPosition="top" pTooltip={{job.title}} class="ui-button-success"
-                [routerLink]="['/applicantadd', job.code, job.title]"></button>
-              -->
+
           </ng-template>
         </p-column>
+
       </p-dataTable>
     </div>
   </div>
