--- a/UI-Angular/JobsAdmin/src/app/applicants/applicants-filter/applicants-filter.component.html
+++ b/UI-Angular/JobsAdmin/src/app/applicants/applicants-filter/applicants-filter.component.html
@@ -1,19 +1,13 @@
 <div class="container card-white">
 
   <div class="ui-g">
-    <form autocomplete="off" (ngSubmit)="search()">
-      <div class="ui-g-12 ui-fluid" class="form-inline">
-        <h2> {{title}}</h2>
-      </div>
-    </form>
-  </div>
-
-  <div class="ui-g">
     <div class="ui-g-12">
 
       <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
         <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
         <input #gb type="text" pInputText size="50" placeholder="Applicants">
+        <i class="fa fa-bars"></i>
+        <span> <strong>{{title}}</strong> </span>
       </div>
 
       <p-dataTable [value]="applicants" [responsive]="true" [rows]="15" [paginator]="true" emptyMessage="No applicants available."
